[gd_scene load_steps=3 format=2]

[ext_resource path="res://Login/Login.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Login" parent="." instance=ExtResource( 1 )]
[connection signal="client_button_pressed" from="Login" to="." method="_on_Login_client_button_pressed"]
[connection signal="server_button_pressed" from="Login" to="." method="_on_Login_server_button_pressed"]
